FIx getlist
