# docs/swagger.json
@@ -55,7 +55,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Success"
+                            "$ref": "#/definitions/models.ListSuccess"
                         }
                     },
                     "500": {
@@ -100,10 +100,11 @@
                 }
             }
         },
-        "models.Success": {
+        "models.ListSuccess": {
             "type": "object",
             "properties": {
-                "data": {}
+                "data": {},
+                "headers": {}
             }
         },
         "models.User": {
